# NvStrapsReBar

./: .clangd  .editorconfig  .gitignore  LICENSE  README.md  compile_commands.template.json
ReBarDxe/: CheckSetupVar.c  DeviceRegistry.c  DeviceRegistry.cc  EfiVariable.c  NvStrapsConfig.c  NvStrapsConfig.cc  NvStrapsPciConfig.cc  PciConfig.c  ReBar.c  ReBar.dsc  ReBarDxe.inf  S3ResumeScript.c  SetupNvStraps.c  StatusVar.c  buildffs.py
ReBarDxe/include/: CheckSetupVar.h  DeviceRegistry.h  DeviceRegistry.hh  EfiVariable.h  LocalAppConfig.h  LocalPciGPU.h  NvStrapsConfig.h  NvStrapsConfig.hh  NvStrapsPciConfig.hh  PciConfig.h  PciHostBridgeResourceAllocation.h  ReBar.h  S3ResumeScript.h  SetupNvStraps.h  StatusVar.h  pciRegs.h
ReBarState/: CMakeLists.txt  ConfigManagerError.cc  ConfigManagerError.hh  ConfigManagerError.ixx  ConfigurationWizard.cc  ConfigurationWizard.hh  ConfigurationWizard.ixx  DeviceList.cc  DeviceList.hh  DeviceList.ixx  DeviceRegistry.ixx  LocalAppConfig.ixx  NvStrapsConfig.cc  NvStrapsConfig.hh  NvStrapsConfig.ixx  NvStrapsDXGI.ixx  NvStrapsWinAPI.ixx  ReBarState.cc  ReBarState.cpp  ReBarState.hh  StatusVar.ixx  TextWizardMenu.cc  TextWizardMenu.hh  TextWizardMenu.ixx  TextWizardPage.cc  TextWizardPage.hh  TextWizardPage.ixx  WinApiError.cc  WinApiError.hh  WinApiError.ixx  compile_commands.template.json  cxx_std_lib.hh  cxx_std_lib.modulemap
ReBarState/cmake/: CxxStdModule.cmake  LocalModulePath.cmake
ReBarState/test/: CMakeLists.txt  TestNvStrapsConfig.cc
